- Removed no-cache tags - Added version to bootstrap.js reference

--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta http-equiv="cache-control" content="no-cache">
-  <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> <!--added from original-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">  <!--added from original-->
 
@@ -450,7 +448,7 @@ if (/canucklegame.github.io/.test(window.location) === true) {
           <img src="assets/assets/cira-logo.svg" alt="CIRA Logo" width="100" height="33">
         </div>
       </div>
-        <script src="flutter_bootstrap.js" async></script>
+        <script src="flutter_bootstrap.js?version=20241030" async></script>
     </div>
   </div>
   <!--<script type="text/javascript"> 
