Update Recap page to #900

--- a/recap.html
+++ b/recap.html
@@ -7442,6 +7442,86 @@
                         <td align="left" valign="top">Lacrosse, known as "the Creator's Game," has significant roots in Indigenous culture, where it was traditionally played by various First Nations as a means of community building and conflict resolution. The modern adaptation of lacrosse, including the exciting format of lacrosse sixes, features six players per team and is designed for fast-paced action. As communities embrace lacrosse sixes, they honour the sport's rich Indigenous heritage while fostering a new generation of players passionate about Canada's national summer sport. Lacrosse is set to return to the Los Angeles 2028 Olympic Games as a medal sport for the first time since 1908. Learn more about lacrosse sixes at <a href="https://www.lacrosse.ca/" target="_blank">Lacrosse Canada</a>!</td>
                         <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1848357726193164347" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a><br><a href="https://x.com/CanuckleGame/status/1848421904627208693" target="_blank"><img src="images/recap/stats.png" width=25 vspace="5" alt="Stats" title="Stats"></a></td>
                      </tr>
+                     <tr>
+                        <td valign="top" align="center">891</td>
+                        <td valign="top" align="center">Oct 21, 2024</td>
+                        <td valign="top" align="center"><strong>EPOCH</strong><br><img src="images/recap/epoch.jpg"></td>
+                        <td align="center" valign="top">4.07</td>
+                        <td align="left" valign="top">In the world of Artificial Intelligence (AI), "epoch" is a term used to describe one cycle through a full dataset during the training of a machine learning model. Canada is a major player in AI, and Dr. Geoffrey Hinton, often called the "godfather of AI," has been a pivotal figure. In October 2024, Dr. Hinton won the Nobel Prize in Physics for his groundbreaking contributions to neural networks and deep learning, helping to shape the modern AI era. His research has played a major role in advancing the field, with lasting effects on everything from healthcare to natural language processing.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1848694974746866072" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">892</td>
+                        <td valign="top" align="center">Oct 22, 2024</td>
+                        <td valign="top" align="center"><strong>SWISH</strong><br>🏀🗑️</td>
+                        <td align="center" valign="top">4.29</td>
+                        <td align="left" valign="top">Basketball fans know the satisfying sound of a perfect shot aka the "swish," but did you know that basketball itself was invented by a Canadian? In 1891, Dr. James Naismith from Almonte, Ontario, created the game, and over a century later, Canada continues to be a major part of basketball's story. As the NBA season tips off today, the Toronto Raptors and fans across the country celebrate the legacy of Naismith's invention. From amateur courts to the pros, every swish is a tribute to Canada’s hoop heritage!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1849046100172259583" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">893</td>
+                        <td valign="top" align="center">Oct 23, 2024</td>
+                        <td valign="top" align="center"><strong>PLEXI</strong><br>🪟</td>
+                        <td align="center" valign="top">4.97</td>
+                        <td align="left" valign="top">Did you know that Plexiglas (often referred to as "plexi") has Canadian roots? In 1931, William Chalmers at McGill University made significant advancements in acrylic resins that would contribute to the development of Plexiglas. This versatile, transparent material became crucial during World War II for aircraft windows and is now widely used in everything from hockey rink barriers to protective shields. Thanks to Canadian ingenuity, plexiglass products continue to play a vital role in industries across the country!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1849416498244153627" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">894</td>
+                        <td valign="top" align="center">Oct 24, 2024</td>
+                        <td valign="top" align="center"><strong>GAMMA</strong><br><img src="images/recap/gamma.jpg"></td>
+                        <td align="center" valign="top">5.07</td>
+                        <td align="left" valign="top">Today is <a href="https://www.braintumour.ca/get-involved/raising-awareness/brain-cancer-awareness-day/" target="_blank">Brain Cancer Awareness Day</a>! In Canada, gamma radiation plays a vital role in various scientific and medical fields. The country has been at the forefront of medical advancements using gamma rays, particularly in cancer treatment. The Gamma Knife, a specialized form of radiation therapy, is used to treat brain tumours and other abnormalities with high precision while minimizing damage to surrounding healthy tissue. The technology has become a key tool in Canadian hospitals, enhancing the effectiveness of cancer treatment. You can support the Brain Tumour Foundation of Canada by buying a hat or hoodie at <a href="https://hatsforhopecanada.ca/" target="_blank">hatsforhopecanada.ca</a>.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1849784950561685976" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">895</td>
+                        <td valign="top" align="center">Oct 25, 2024</td>
+                        <td valign="top" align="center"><strong>MEZZO</strong><br>😮🎶🎭</td>
+                        <td align="center" valign="top">5.46</td>
+                        <td align="left" valign="top">In celebration of World Opera Day on October 25th, let's shine a spotlight on some of Canada's incredible mezzo-soprano talents! Mezzo-sopranos sing in the vocal range between soprano and contralto, often playing some of the most dynamic characters in opera. Wallis Giunta, an award-winning Canadian mezzo-soprano, has wowed audiences internationally with her performances. Another iconic Canadian mezzo is Catherine Robbin, whose illustrious career has been celebrated around the world. Canada's opera scene continues to thrive, with these talented voices leading the way on the global stage. Learn more about the Canadian Opera Company at <a href="https://www.coc.ca/" target="_blank">coc.ca</a>.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1850163786231001471" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">896</td>
+                        <td valign="top" align="center">Oct 26, 2024</td>
+                        <td valign="top" align="center"><strong>EERIE</strong><br>😱</td>
+                        <td align="center" valign="top">5.14</td>
+                        <td align="left" valign="top">As Halloween draws near, Canada is home to some truly eerie locations that promise spine-chilling experiences! From the haunted Fairmont Banff Springs Hotel in Alberta, known for its ghostly bride roaming the halls, to the Ottawa Jail Hostel, where visitors report unsettling encounters, the country offers numerous sites steeped in supernatural lore. These places not only showcase Canada's rich history but also the spooky tales that come alive during the Halloween season. So, if you're in the mood for some thrills this October, consider exploring one of these eerie spots!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1850510730627551443" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">897</td>
+                        <td valign="top" align="center">Oct 27, 2024</td>
+                        <td valign="top" align="center"><strong>GHOUL</strong><br><img src="images/recap/ghoul.jpg"></td>
+                        <td align="center" valign="top">3.88</td>
+                        <td align="left" valign="top">In Canada, Halloween is a time when tales of ghouls and ghosts come alive! Many regions have their own spooky legends, with ghouls often depicted as eerie creatures lurking in graveyards or abandoned places. For example, the historic city of Montreal is famous for its haunted sites, including the Old Port, where locals share stories of ghoulish apparitions. Whether it's the restless spirits of pioneers or mythical creatures from Indigenous folklore, Canada's rich tapestry of ghost stories adds a uniquely chilling flavour to Halloween celebrations. So this October, embrace the spooky season and keep an eye out for ghouls as you wander through haunted sites!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1850946098606575813" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">898</td>
+                        <td valign="top" align="center">Oct 28, 2024</td>
+                        <td valign="top" align="center"><strong>CRYPT</strong><br>🥾⚰️</td>
+                        <td align="center" valign="top">3.90</td>
+                        <td align="left" valign="top">Alberta's famous Crypt Lake Trail offers a perfect Halloween vibe, with its eerie tunnels, cliffside paths, and mysterious lake destination. Located in Waterton Lakes National Park, this adventure-filled hike is one of Canada's most thrilling and challenging, as you navigate through caves and climb ladders to reach the secluded Crypt Lake. Canada also has some famous crypts, like the crypt in St. James Cathedral in Toronto, which holds the remains of some notable historical figures. Whether you're trekking to a scenic lake or exploring hidden history, Canada's "crypts" come with plenty of mystery and awe!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1851234679824769059" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">899</td>
+                        <td valign="top" align="center">Oct 29, 2024</td>
+                        <td valign="top" align="center"><strong>MAIZE</strong><br>🌾</td>
+                        <td align="center" valign="top">4.65</td>
+                        <td align="left" valign="top">Did you know that maize, or corn, is one of Canada's most important crops? It thrives particularly in Ontario and Quebec, where it’s often used for animal feed, as well as human consumption in products like corn syrup and popcorn. As Halloween approaches, corn becomes a festive staple, with many Canadians decorating their homes with corn husks and using maize to create seasonal decorations like cornucopias or even haunted corn mazes. These maize mazes offer a fun way for families to celebrate the spooky season while appreciating the agricultural heritage of Canada.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1851584857622692257" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">900</td>
+                        <td valign="top" align="center">Oct 30, 2024</td>
+                        <td valign="top" align="center"><strong>MUMMY</strong><br>🥃🦶</td>
+                        <td align="center" valign="top">5.30</td>
+                        <td align="left" valign="top">As spooky season is upon us, let's talk about a famous "mummy" of sorts in Dawson City, Yukon! The legendary Sourtoe Cocktail involves a mummified human toe, which is dropped into a drink. Participants who are brave enough take a sip with the preserved toe touching their lips, all in the spirit of a tradition that dates back to the 1970s. While it’s not your typical Halloween mummy, it’s certainly a Canadian story that’s both eerie and fascinating!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1851948251471085983" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
 
 
 
@@ -8322,16 +8402,16 @@
                   <tr><td align="center" valign="top">779</td><td align="center" valign="top"><strong>LOVED</strong></td></tr>
                   <tr><td align="center" valign="top">780</td><td align="center" valign="top"><strong>SQUAD</strong></td></tr>
 
-                  <tr><td align="center" valign="top">781</td><td align="center" valign="top"><strong>SITKA</strong></td></tr>
-                  <tr><td align="center" valign="top">782</td><td align="center" valign="top"><strong>ROAST</strong></td></tr>
-                  <tr><td align="center" valign="top">783</td><td align="center" valign="top"><strong>SKULK</strong></td></tr>
-                  <tr><td align="center" valign="top">784</td><td align="center" valign="top"><strong>ELVER</strong></td></tr>
-                  <tr><td align="center" valign="top">785</td><td align="center" valign="top"><strong>SODDY</strong></td></tr>
-                  <tr><td align="center" valign="top">786</td><td align="center" valign="top"><strong>MODEL</strong></td></tr>
-                  <tr><td align="center" valign="top">787</td><td align="center" valign="top"><strong>PRISM</strong></td></tr>
-                  <tr><td align="center" valign="top">788</td><td align="center" valign="top"><strong>FLATS</strong></td></tr>
-                  <tr><td align="center" valign="top">789</td><td align="center" valign="top"><strong>LOVED</strong></td></tr>
-                  <tr><td align="center" valign="top">790</td><td align="center" valign="top"><strong>SQUAD</strong></td></tr>
+                  <tr><td align="center" valign="top">781</td><td align="center" valign="top"><strong>MAYBE</strong></td></tr>
+                  <tr><td align="center" valign="top">782</td><td align="center" valign="top"><strong>PITON</strong></td></tr>
+                  <tr><td align="center" valign="top">783</td><td align="center" valign="top"><strong>YAHOO</strong></td></tr>
+                  <tr><td align="center" valign="top">784</td><td align="center" valign="top"><strong>BLESS</strong></td></tr>
+                  <tr><td align="center" valign="top">785</td><td align="center" valign="top"><strong>CABER</strong></td></tr>
+                  <tr><td align="center" valign="top">786</td><td align="center" valign="top"><strong>YURTS</strong></td></tr>
+                  <tr><td align="center" valign="top">787</td><td align="center" valign="top"><strong>MAJOR</strong></td></tr>
+                  <tr><td align="center" valign="top">788</td><td align="center" valign="top"><strong>BRONC</strong></td></tr>
+                  <tr><td align="center" valign="top">789</td><td align="center" valign="top"><strong>SLURP</strong></td></tr>
+                  <tr><td align="center" valign="top">790</td><td align="center" valign="top"><strong>CHUCK</strong></td></tr>
 
                   <tr><td align="center" valign="top">791</td><td align="center" valign="top"><strong>BOOZE</strong></td></tr>
                   <tr><td align="center" valign="top">792</td><td align="center" valign="top"><strong>CAPES</strong></td></tr>
@@ -8442,6 +8522,17 @@
                   <tr><td align="center" valign="top">888</td><td align="center" valign="top"><strong>AGAIN</strong></td></tr>
                   <tr><td align="center" valign="top">889</td><td align="center" valign="top"><strong>FLUME</strong></td></tr>
                   <tr><td align="center" valign="top">890</td><td align="center" valign="top"><strong>SIXES</strong></td></tr>
+
+                  <tr><td align="center" valign="top">891</td><td align="center" valign="top"><strong>EPOCH</strong></td></tr>
+                  <tr><td align="center" valign="top">892</td><td align="center" valign="top"><strong>SWISH</strong></td></tr>
+                  <tr><td align="center" valign="top">893</td><td align="center" valign="top"><strong>PLEXI</strong></td></tr>
+                  <tr><td align="center" valign="top">894</td><td align="center" valign="top"><strong>GAMMA</strong></td></tr>
+                  <tr><td align="center" valign="top">895</td><td align="center" valign="top"><strong>MEZZO</strong></td></tr>
+                  <tr><td align="center" valign="top">896</td><td align="center" valign="top"><strong>EERIE</strong></td></tr>
+                  <tr><td align="center" valign="top">897</td><td align="center" valign="top"><strong>GHOUL</strong></td></tr>
+                  <tr><td align="center" valign="top">898</td><td align="center" valign="top"><strong>CRYPT</strong></td></tr>
+                  <tr><td align="center" valign="top">899</td><td align="center" valign="top"><strong>MAIZE</strong></td></tr>
+                  <tr><td align="center" valign="top">900</td><td align="center" valign="top"><strong>MUMMY</strong></td></tr>
 
                </tbody>
             </table>
