Update Recap page to #910

--- a/recap.html
+++ b/recap.html
@@ -7522,6 +7522,86 @@
                         <td align="left" valign="top">As spooky season is upon us, let's talk about a famous "mummy" of sorts in Dawson City, Yukon! The legendary Sourtoe Cocktail involves a mummified human toe, which is dropped into a drink. Participants who are brave enough take a sip with the preserved toe touching their lips, all in the spirit of a tradition that dates back to the 1970s. While it’s not your typical Halloween mummy, it’s certainly a Canadian story that’s both eerie and fascinating!</td>
                         <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1851948251471085983" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
                      </tr>
+                     <tr>
+                        <td valign="top" align="center">901</td>
+                        <td valign="top" align="center">Oct 31, 2024</td>
+                        <td valign="top" align="center"><strong>GRAVE</strong><br>🪦</td>
+                        <td align="center" valign="top">4.49</td>
+                        <td align="left" valign="top">Happy Halloween from Canuckle! 🎃 Halloween is the perfect time to explore some of Canada's most haunted grave sites. One eerie spot is Fairview Lawn Cemetery in Halifax, where victims of the Titanic disaster were laid to rest. Many visitors report strange occurrences near the graves, with whispers of spirits lingering on the grounds. Another spooky destination is Victoria’s Ross Bay Cemetery in British Columbia, where tales of ghostly apparitions wandering among the graves keep visitors on edge. Canada's haunted history runs deep, and during the Halloween season, these grave sites become even more chilling!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1852322854450135388" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">902</td>
+                        <td valign="top" align="center">Nov 1, 2024</td>
+                        <td valign="top" align="center"><strong>SKULL</strong><br>💀🌼🕯️</td>
+                        <td align="center" valign="top">4.05</td>
+                        <td align="left" valign="top">Skulls hold special meaning in many cultures and traditions, including Day of the Dead celebrations observed on November 1st and 2nd. In Canada, the influence of this Mexican tradition can be seen in festivals and events across the country, particularly in cities with vibrant Latin American communities, such as Toronto, Vancouver, and Montreal. Skulls, or calaveras, are a symbolic part of this day, reminding us to celebrate and remember loved ones who have passed. From art displays to festivals, Canadians have embraced the beauty of the Day of the Dead's vibrant symbolism. It's a reminder that traditions from around the world find a unique place in Canada's diverse cultural tapestry!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1852703203512459755" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">903</td>
+                        <td valign="top" align="center">Nov 2, 2024</td>
+                        <td valign="top" align="center"><strong>PEKOE</strong><br>🍵🍊🫖</td>
+                        <td align="center" valign="top">4.88</td>
+                        <td align="left" valign="top">Canadians love their tea, and Orange Pekoe is one of the most popular varieties! In fact, over half of Canadians enjoy tea regularly, with more than 10 billion cups consumed each year. Whether it's a morning cup or an afternoon tradition, tea is a beloved beverage across the country, from coast to coast. With a wide variety of flavours available, Orange Pekoe remains a staple in many households.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1853072369922793973" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">904</td>
+                        <td valign="top" align="center">Nov 3, 2024</td>
+                        <td valign="top" align="center"><strong>GASSY</strong><br>🗣️</td>
+                        <td align="center" valign="top">4.65</td>
+                        <td align="left" valign="top">John Deighton, better known as "Gassy Jack", was a bar-owner in British Columbia. The Gastown neighbourhood of Vancouver takes its name from him. Deighton was known as Gassy Jack because of his talkative nature and his penchant for storytelling. A statue of Gassy Jack was installed in Gastown where Deighton had built the Globe Saloon in 1867, one of the first buildings in Vancouver. Although Deighton is one of Vancouver's founding figures, he is considered a controversial character for several reasons tied to both his personal life and his role in the city's colonial past. In 2022, protesters tore down the statue of Gassy Jack during the Women's Memorial March.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1853400516874604827" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">905</td>
+                        <td valign="top" align="center">Nov 4, 2024</td>
+                        <td valign="top" align="center"><strong>SCION</strong><br>🏛️👨‍👦</td>
+                        <td align="center" valign="top">4.02</td>
+                        <td align="left" valign="top">In Canada, Prime Minister Justin Trudeau is often considered a scion - a descendant of a prominent family. His father, Pierre Elliott Trudeau, was one of Canada's most famous and influential prime ministers, serving for 15 years. Justin followed in his father's footsteps, becoming the second Trudeau to hold the country's highest office. November 4th marked the 9th anniversary of Justin Trudeau being sworn in as Canada's 23rd prime minister.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1853762741934178720" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">906</td>
+                        <td valign="top" align="center">Nov 5, 2024</td>
+                        <td valign="top" align="center"><strong>ICING</strong><br>🍩</td>
+                        <td align="center" valign="top">4.73</td>
+                        <td align="left" valign="top">Happy National Donut Day! Canada is so sweet, it has two National Donut Days each year: the summer edition in June and another sweet treat on November 5th. Donuts, often topped with delicious layers of icing, are a beloved snack enjoyed coast to coast. Whether at a local bakery or shared with family and friends, these sugary delights help mark the day. So, on this second National Donut Day, don't forget to indulge in your favourite iced donut. Cheers to celebrating Canada's donut love, twice a year!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1854138403857568051" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">907</td>
+                        <td valign="top" align="center">Nov 6, 2024</td>
+                        <td valign="top" align="center"><strong>HYPER</strong><br>💻🎮🤖</td>
+                        <td align="center" valign="top">4.77</td>
+                        <td align="left" valign="top"><a href="https://www.virtualhyper.net/" target="_blank">Hyper Canada</a> is a digital arts and tech conference, hosting panels on interactive arts, game development, virtual reality, and artificial intelligence. It's a one-of-a-kind conference in Winnipeg, bringing immersive tech enthusiasts, digital creators, and visionaries together to explore the creative, commercial and technical possibilities of new emerging immersive digital worlds. This year, Hyper Lite takes place on November 19, 2024!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1854502859762508236" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">908</td>
+                        <td valign="top" align="center">Nov 7, 2024</td>
+                        <td valign="top" align="center"><strong>IVORY</strong><br>🦴😎❄️</td>
+                        <td align="center" valign="top">4.45</td>
+                        <td align="left" valign="top">International Inuit Day on November 7 celebrates the rich cultural heritage of Inuit communities across Canada's Arctic, including their incredible craftsmanship. Among their many innovations, Inuit carvers have long used natural materials like ivory to craft intricate art pieces and practical tools. Traditional Inuit snow goggles (Inuktitut: ilgaak or iggaak), often made from ivory or bone, were designed with narrow slits to protect against the bright Arctic sun reflecting off the snow - an innovative design to prevent snow blindness.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1854867417811632217" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">909</td>
+                        <td valign="top" align="center">Nov 8, 2024</td>
+                        <td valign="top" align="center"><strong>CHIMO</strong><br>👋🪖🍁</td>
+                        <td align="center" valign="top">4.64</td>
+                        <td align="left" valign="top">On November 8, Canada observes <a href="https://www.veterans.gc.ca/en/remembrance/people-and-stories/indigenous-veterans" target="_blank">National Indigenous Veterans Day</a>, honouring the significant contributions of First Nations, Métis, and Inuit individuals in military service. Throughout history, Indigenous peoples have played crucial roles in Canadian military efforts, from the First and Second World Wars to modern peacekeeping missions. "Chimo" is a traditional Inuit greeting used to say "hello" or "goodbye." It gained broader recognition in Canada when it was adopted as a cheer by the Canadian military engineers during World War II. The word symbolizes unity, camaraderie, and goodwill among Canadians.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1855258684118446479" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">910</td>
+                        <td valign="top" align="center">Nov 9, 2024</td>
+                        <td valign="top" align="center"><strong>BROOK</strong><br>🌊🏞️</td>
+                        <td align="center" valign="top">4.67</td>
+                        <td align="left" valign="top">Canada is home to countless brooks that meander through lush forests and rugged landscapes. These babbling waterways provide essential habitats for fish like brook trout, a prized catch for anglers in Canadian waters. Whether you're hiking in Algonquin Park or fishing in Newfoundland's rivers, encountering a brook is a tranquil reminder of Canada's pristine natural beauty. So, next time you wander through Canada's wilderness, listen closely - the whispers of a brook might just lead you to an unforgettable adventure!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1855598987278950404" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
 
 
 
@@ -8533,6 +8613,17 @@
                   <tr><td align="center" valign="top">898</td><td align="center" valign="top"><strong>CRYPT</strong></td></tr>
                   <tr><td align="center" valign="top">899</td><td align="center" valign="top"><strong>MAIZE</strong></td></tr>
                   <tr><td align="center" valign="top">900</td><td align="center" valign="top"><strong>MUMMY</strong></td></tr>
+
+                  <tr><td align="center" valign="top">901</td><td align="center" valign="top"><strong>GRAVE</strong></td></tr>
+                  <tr><td align="center" valign="top">902</td><td align="center" valign="top"><strong>SKULL</strong></td></tr>
+                  <tr><td align="center" valign="top">903</td><td align="center" valign="top"><strong>PEKOE</strong></td></tr>
+                  <tr><td align="center" valign="top">904</td><td align="center" valign="top"><strong>GASSY</strong></td></tr>
+                  <tr><td align="center" valign="top">905</td><td align="center" valign="top"><strong>SCION</strong></td></tr>
+                  <tr><td align="center" valign="top">906</td><td align="center" valign="top"><strong>ICING</strong></td></tr>
+                  <tr><td align="center" valign="top">907</td><td align="center" valign="top"><strong>HYPER</strong></td></tr>
+                  <tr><td align="center" valign="top">908</td><td align="center" valign="top"><strong>IVORY</strong></td></tr>
+                  <tr><td align="center" valign="top">909</td><td align="center" valign="top"><strong>CHIMO</strong></td></tr>
+                  <tr><td align="center" valign="top">910</td><td align="center" valign="top"><strong>BROOK</strong></td></tr>
 
                </tbody>
             </table>
